force-app/main/default/objects/TSGADX__Deal__c/fields/Total_Color_Monthly_Service__c.field-meta.xml
<CustomField>
    <fullName>Total_Color_Monthly_Service__c</fullName>
    <formula>IF(Target_Color_CPP__c == 0,TSGCFG__Quote__r.TSGCFG__MPSTotalColorMonthlyCost__c+(TSGCFG__Quote__r.TSGCFG__PrinterTotalColorVolume__c*TSGCFG__Quote__r.TSGCFG__PrinterColorCPC__c)+(TSGCFG__Quote__r.TSGCFG__ProdTotalColorVolume__c*TSGCFG__Quote__r.TSGCFG__Prod_Color_CPC__c), (Target_Color_CPP__c*TotalColorMonthlyVolume__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Total of ALL Color Service</inlineHelpText>
    <label>Total Color Monthly Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>