force-app/main/default/objects/TSGADX__Deal__c/fields/Total_Hardware_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Hardware_Revenue__c</fullName>
    <description>Total for Equipment and Accessories Sale Price Revenue from Quote Line Items</description>
    <formula>TSGCFG__Quote__r.MM_Hardware_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total for Equipment and Accessories Sale Price Revenue from Quote Line Items</inlineHelpText>
    <label>Total Hardware Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>