force-app/main/default/objects/TSGADX__Deal__c/fields/Total_IT_Services_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_IT_Services_Revenue__c</fullName>
    <formula>TSGADX__Monthly_Billing_Amount__c *  TSGADX__Number_of_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total IT Services Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>