force-app/main/default/objects/TSGADX__Deal__c/fields/Total_Lease_Buyout_BT__c.field-meta.xml
<CustomField>
    <fullName>Total_Lease_Buyout_BT__c</fullName>
    <formula>LBO_Payment_BT__c * LBO_Term_BT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of Lease Buyout ( LBO Payment * LBO Term)</inlineHelpText>
    <label>Total Lease Buyout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>