force-app/main/default/objects/TSGADX__Deal__c/fields/Total_Lease_Funding__c.field-meta.xml
<CustomField>
    <fullName>Total_Lease_Funding__c</fullName>
    <description>Total Funding for deal (Total Lease Items - Buyouts/Upgrades)</description>
    <formula>TSGCFG__Quote__r.TSGCFG__Total_Equipment_Lease__c  -  TSGCFG__Quote__r.Total_Lease_Buyout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Funding for deal (Total Lease Items - Buyouts/Upgrades)</inlineHelpText>
    <label>Total Lease Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>