force-app/main/default/objects/TSGADX__Deal__c/fields/Total_MM_Comp__c.field-meta.xml
<CustomField>
    <fullName>Total_MM_Comp__c</fullName>
    <description>Total Comp for this Mail Machine Deal</description>
    <formula>MM_Machine_Comp__c + MM_Support_Comp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Comp for this Mail Machine Deal</inlineHelpText>
    <label>Total MM Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>