force-app/main/default/objects/TSGADX__Deal__c/fields/Total_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Payment__c</fullName>
    <formula>TSGCFG__Quote__r.EQ_Service_Monthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>