force-app/main/default/objects/TSGADX__Deal__c/fields/Total_Monthly_Services__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Services__c</fullName>
    <description>Total Monthly Services Revenues not included in hardware or CPC Plan</description>
    <formula>TSGCFG__Quote__r.MM_Monthly_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Monthly Services Revenues not included in hardware or CPC Plan</inlineHelpText>
    <label>Total Monthly Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>