force-app/main/default/objects/TSGADX__Deal__c/fields/Total_MRR__c.field-meta.xml
<CustomField>
    <fullName>Total_MRR__c</fullName>
    <inlineHelpText>Total IT, Security, Backup Services MRR</inlineHelpText>
    <label>Total MRR</label>
    <summarizedField>TSGCFG__Deal_Line_Items__c.TSGCFG__Total__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Deal_Line_Items__c.TSGCFG__Category__c</field>
        <operation>contains</operation>
        <value>MRR</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Deal_Line_Items__c.TSGCFG__Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>