force-app/main/default/objects/TSGADX__Deal__c/fields/Total_Primary_Rep_Comp__c.field-meta.xml
<CustomField>
    <fullName>Total_Primary_Rep_Comp__c</fullName>
    <formula>IF( Split_Percentage__c = NULL, Rep_GP_Comp__c +  Net_New_Comp__c + Override_to_Comp__c, (Rep_GP_Comp__c +  Net_New_Comp__c + Override_to_Comp__c) * (1 - Split_Percentage__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Primary Rep Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>