force-app/main/default/objects/TSGADX__Deal__c/fields/Total_Rep_Comp_BT_del__c.field-meta.xml
<CustomField>
    <fullName>Total_Rep_Comp_BT_del__c</fullName>
    <formula>00N3600000EfDzu.00N1R00000Tu1AD</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rep Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>