force-app/main/default/objects/TSGADX__Deal__c/fields/Total_Rep_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Rep_Cost__c</fullName>
    <description>Rollup of QQ line items for total rep deal cost.</description>
    <inlineHelpText>Rollup of QQ line items for total rep deal cost.</inlineHelpText>
    <label>Total Rep Cost</label>
    <summarizedField>TSGCFG__Deal_Line_Items__c.TSGCFG__Total_Cost__c</summarizedField>
    <summaryForeignKey>TSGCFG__Deal_Line_Items__c.TSGCFG__Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>