force-app/main/default/objects/TSGADX__Deal__c/fields/Total_Standard_Comp__c.field-meta.xml
<CustomField>
    <fullName>Total_Standard_Comp__c</fullName>
    <formula>Rep_GP_Comp__c +  Net_New_Comp__c +  Override_to_Comp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Deal Owners Comp if no split.</inlineHelpText>
    <label>Total Standard Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>