force-app/main/default/objects/TSGADX__Deal__c/fields/Total_TCO__c.field-meta.xml
<CustomField>
    <fullName>Total_TCO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to use in a Total TCO Report so that this Deal&apos;s Primary Quote Details can be used.</description>
    <inlineHelpText>Check to use in a Total TCO Report so that this Deal&apos;s Primary Quote Details can be used.</inlineHelpText>
    <label>Total TCO</label>
    <type>Checkbox</type>
</CustomField>