force-app/main/default/objects/TSGADX__Deal__c/fields/TotalColorMonthlyVolume__c.field-meta.xml
<CustomField>
    <fullName>TotalColorMonthlyVolume__c</fullName>
    <formula>TSGCFG__Quote__r.TSGCFG__MPSTotalColorVolume__c+TSGCFG__Quote__r.TSGCFG__PrinterTotalColorVolume__c+TSGCFG__Quote__r.TSGCFG__ProdTotalColorVolume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of ALL Color Service Volumes</inlineHelpText>
    <label>Total Color Monthly Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>