force-app/main/default/objects/TSGADX__Deal__c/fields/TSG_CMRules__CM_Rule__c.field-meta.xml
<CustomField>
    <fullName>TSG_CMRules__CM_Rule__c</fullName>
    <label>CM Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>