force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Accessories__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Accessories__c</fullName>
    <label>Paper Size Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3&quot; x 5&quot;</fullName>
            </value>
            <value>
                <fullName>5.5&quot; x 8.5&quot;</fullName>
            </value>
            <value>
                <fullName>8.5&quot; x 11&quot;</fullName>
            </value>
            <value>
                <fullName>8.5&quot; x 14&quot;</fullName>
            </value>
            <value>
                <fullName>11&quot; x 17&quot;</fullName>
            </value>
            <value>
                <fullName>12&quot; x 18&quot;</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>