force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Achieved_Price__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Achieved_Price__c</fullName>
    <label>Achieved Price $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>