force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Active_Directory_Environment__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Active_Directory_Environment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if network environment for the solution is Windows Active Directory.</inlineHelpText>
    <label>Active Directory Environment</label>
    <type>Checkbox</type>
</CustomField>