force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Add_to_Documents__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Add_to_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Checked, TCO for MPS program data will be exported to your related deal documents, along with your equipment deal data.</description>
    <inlineHelpText>When Checked, TCO for MPS program data will be exported to your related deal documents, along with your equipment deal data.</inlineHelpText>
    <label>Add to Documents</label>
    <type>Checkbox</type>
</CustomField>