force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Agedays__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Agedays__c</fullName>
    <formula>ROUND( NOW() -  CreatedDate , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days since this &quot;Deal&quot; was created</inlineHelpText>
    <label>Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>