force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Agency_Revenue__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Agency_Revenue__c</fullName>
    <description>This can be added entered by Sales Rep or Auto Calculated with Workflow.  Typically Achieved + Finance + Customer Education + Analyst + Multi-Site.</description>
    <inlineHelpText>This can be added entered by Sales Rep or Auto Calculated with Workflow.  Typically Achieved + Finance + Customer Education + Analyst + Multi-Site.</inlineHelpText>
    <label>Agency Revenue $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>