force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Agent_GP__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Agent_GP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Agent Gross Profit = Agent Margin + Multi-site Margin + Finance Margin</description>
    <inlineHelpText>Agent Gross Profit = Agent Margin + Multi-site Margin + Finance Margin</inlineHelpText>
    <label>Agent GP $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>