force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Agent_Margin_Dollars__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Agent_Margin_Dollars__c</fullName>
    <description>Enter Agent Margin</description>
    <inlineHelpText>Enter Agent Margin</inlineHelpText>
    <label>Agent Margin $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>