force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Agreement_Dollars__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Agreement_Dollars__c</fullName>
    <formula>IF(ISPICKVAL( TSGADX__Forecast_Category__c , &quot;Agreement&quot;),  TSGADX__Total_Dollars__c  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>