force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Alert__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked the alert message will be displayed. Requires that the alert content field contains message in ADX settings</description>
    <inlineHelpText>If checked the alert message will be displayed. Requires that the alert content field contains message in ADX settings</inlineHelpText>
    <label>Alert</label>
    <type>Checkbox</type>
</CustomField>