force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__All_Sites_Same_Network__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__All_Sites_Same_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check Box if all customer sites for proposed solutions are on the same network as where main Solution App server will be located.</inlineHelpText>
    <label>All Sites Same Network</label>
    <type>Checkbox</type>
</CustomField>