force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Amount_for_Commission_Calculations__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Amount_for_Commission_Calculations__c</fullName>
    <inlineHelpText>Enter $ Amount that applies towards Commission Calculations.  (Revenue or Margin)</inlineHelpText>
    <label>Amount for Commission Calculations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>