force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Analyst_Dollars__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Analyst_Dollars__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Analyst Dollars $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>