force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Analyst_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Analyst_Schedule_Date__c</fullName>
    <label>Analyst Schedule Date</label>
    <type>Date</type>
</CustomField>