force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Anticipated_Usage__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Anticipated_Usage__c</fullName>
    <label>Anticipated Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mainly small jobs or personal use</fullName>
            </value>
            <value>
                <fullName>Small to medium jobs, frequent usage</fullName>
            </value>
            <value>
                <fullName>Small to medium jobs, heavy usage</fullName>
            </value>
            <value>
                <fullName>Small to large jobs, heavy usage</fullName>
            </value>
            <value>
                <fullName>Small to light production jobs, heavy usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>