force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Application_Integrations__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Application_Integrations__c</fullName>
    <inlineHelpText>Are there any customer applications needing workflow integration? ie; Great Plains for accounting Workflow.</inlineHelpText>
    <label>Application Integrations</label>
    <type>TextArea</type>
</CustomField>