force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Assessed_By__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Assessed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>To Look up overlay/specialist or other internal user who performed the solution assessment.</inlineHelpText>
    <label>Assessed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deals2</relationshipName>
    <type>Lookup</type>
</CustomField>