force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Assessment_Date__c</fullName>
    <inlineHelpText>What Date was solution assessment completed.</inlineHelpText>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>