force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Authentication__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Authentication__c</fullName>
    <inlineHelpText>What types of authentication at the MFP are needed for solution integration.</inlineHelpText>
    <label>MFP Authentication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>PIN Code</fullName>
            </value>
            <value>
                <fullName>Prox Cards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>