force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Average_Mo_Volume__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Average_Mo_Volume__c</fullName>
    <label>Average Mo/Volume</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 500</fullName>
            </value>
            <value>
                <fullName>501 - 3,000</fullName>
            </value>
            <value>
                <fullName>3,001 - 5,000</fullName>
            </value>
            <value>
                <fullName>5,000 - 10,000</fullName>
            </value>
            <value>
                <fullName>10,001 - 20,000</fullName>
            </value>
            <value>
                <fullName>20,000 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>