force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Buisness_SIC_Name__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Buisness_SIC_Name__c</fullName>
    <description>SIC Name from Business - When updated, the business SIC Name will be updated by trigger.</description>
    <inlineHelpText>SIC Name for Business</inlineHelpText>
    <label>Business: SIC Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>