force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Business_Case__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Business_Case__c</fullName>
    <inlineHelpText>Enter the business case for this deal.</inlineHelpText>
    <label>Business Case</label>
    <type>TextArea</type>
</CustomField>