force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Business_City__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Business_City__c</fullName>
    <description>Billing City from Business - When updated, it will update the business billing city by trigger.</description>
    <inlineHelpText>Billing City for Business</inlineHelpText>
    <label>Business: Billing City</label>
    <length>120</length>
    <type>Text</type>
</CustomField>