force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Business_Country__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Business_Country__c</fullName>
    <description>Billing Country Address from Business - When updated, the business billing country is updated by trigger.</description>
    <inlineHelpText>Billing Country Address for Business</inlineHelpText>
    <label>Business: Billing Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>