force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Business_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Business_Last_Activity_Date__c</fullName>
    <formula>TSGADX__Company__r.LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Last Activity Date</label>
    <type>Date</type>
</CustomField>