force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Business_Phone__c</fullName>
    <description>Phone from Business - When updated, the business phone will be updated by trigger.</description>
    <inlineHelpText>Phone for business</inlineHelpText>
    <label>Business: Phone</label>
    <type>Phone</type>
</CustomField>