force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Business_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Business_Postal_Code__c</fullName>
    <description>Billing Postal Code from Business - When updated, it will update the business billing postal code by trigger.</description>
    <inlineHelpText>Billing Postal Code for Business</inlineHelpText>
    <label>Business: Billing Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>