force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Business_SIC__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Business_SIC__c</fullName>
    <description>SIC code from Business - When updated, it will update the business SIC code by trigger.</description>
    <inlineHelpText>SIC Code for Business</inlineHelpText>
    <label>Business: SIC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>