force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Business_State__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Business_State__c</fullName>
    <description>Billing State from Business.  When updated, it will update the Business Billing State address by trigger</description>
    <inlineHelpText>Billing State address from Business</inlineHelpText>
    <label>Business: Billing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>