force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Business_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Business_Street_Address__c</fullName>
    <description>Street Address from Business Billing Street Address - When updated, it will update the Billing Street Address by trigger.</description>
    <inlineHelpText>Billing Street Address for Business</inlineHelpText>
    <label>Business: Billing Street Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>