force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Business_Website__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Business_Website__c</fullName>
    <description>Website from Business - When updated, it will update the business website by trigger</description>
    <inlineHelpText>Website from Business</inlineHelpText>
    <label>Business: Website</label>
    <type>Url</type>
</CustomField>