force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>