force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Capture_Sources__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Capture_Sources__c</fullName>
    <inlineHelpText>Besides MFP Scanners, what other sources will there be document or data capture from for solution. ie: Email, eForms, Mobile, Desktop Scanners, etc.</inlineHelpText>
    <label>Capture Sources</label>
    <type>TextArea</type>
</CustomField>