force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Card_Reader_Types__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Card_Reader_Types__c</fullName>
    <inlineHelpText>List Reader types needed and quantities of each.</inlineHelpText>
    <label>Card Reader Types</label>
    <type>TextArea</type>
</CustomField>