force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Channel__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Canon</fullName>
            </value>
            <value>
                <fullName>ECM</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Konica Minolta</fullName>
            </value>
            <value>
                <fullName>Kyocera</fullName>
            </value>
            <value>
                <fullName>Lexmark</fullName>
            </value>
            <value>
                <fullName>M&amp;S</fullName>
            </value>
            <value>
                <fullName>MNS</fullName>
            </value>
            <value>
                <fullName>MPS</fullName>
            </value>
            <value>
                <fullName>Neopost</fullName>
            </value>
            <value>
                <fullName>Ricoh</fullName>
            </value>
            <value>
                <fullName>Sharp</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Toshiba</fullName>
            </value>
            <value>
                <fullName>Xerox</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>