force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Chatter_Last_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Chatter_Last_Completed_Date_Time__c</fullName>
    <label>Chatter Last Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>