force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Chatter_Link__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Chatter_Link__c</fullName>
    <label>Chatter Link</label>
    <type>Url</type>
</CustomField>