force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Chatter_Subject__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Chatter_Subject__c</fullName>
    <label>Chatter Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>