force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Close_Date_2__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Close_Date_2__c</fullName>
    <description>Duplicate of Close Date for Reports</description>
    <formula>TSGADX__Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duplicate of Close Date for Reports</inlineHelpText>
    <label>Close Date 2</label>
    <type>Date</type>
</CustomField>