force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Close_Date__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Close_Date__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>