force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Close_Probability__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Close_Probability__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter your probability percentage of closing this deal</inlineHelpText>
    <label>Close Probability (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>