force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Close_Probability_Dollars__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Close_Probability_Dollars__c</fullName>
    <formula>TSGADX__Total_Dollars__c *  TSGADX__Close_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Probability $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>