force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Closed__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Closed - updated by work flow</description>
    <inlineHelpText>Closed</inlineHelpText>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>