force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Closed_Dollars__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Closed_Dollars__c</fullName>
    <description>This is for forecast reports - Do not put on page layout!</description>
    <formula>IF( ISPICKVAL(TSGADX__Forecast_Category__c, &quot;Closed&quot;), TSGADX__Total_Dollars__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>