force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Company__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>