force-app/main/default/objects/TSGADX__Deal__c/fields/TSGADX__Competitor_Lease_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>TSGADX__Competitor_Lease_Expiration_Date__c</fullName>
    <description>When a deal is closed lost, you must enter the competitor expiration date.</description>
    <inlineHelpText>When a deal is closed lost, you must enter the competitor lease expiration date.</inlineHelpText>
    <label>Competitor Expiration Date</label>
    <type>Date</type>
</CustomField>